[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nn_cuda =  { path = "../nn_cuda" }
cuda_std = "0.2.2"
itertools = "0.10.3"
kiddo = "0.2.4"
ply-rs = "0.1.3"
rayon = "1.5.3"
rstar = "0.9.3"
