[package]
name = "nn_cuda"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda_std = "0.2.2"
cust = "0.3.2"
bit_partition_gpu = { path = "../bit_partition_gpu" }
scan_gpu = { path = "../scan_gpu" }
itertools = "0.10.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
rand_hc = "0.3.1"
rayon = "1.5.3"
rstar = "0.9.3"

[build-dependencies]
cuda_builder = "0.3.0"

[[bench]]
harness = false
name = "bench_nn"